fixed a padding bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -5,21 +5,18 @@
   --header-footer-height: 5rem;
 }
 body {
+  background-color: darkgrey;
   margin: 0;
   max-width: var(--max-width);
   margin-left: auto;
   margin-right: auto;
   /* height: 100dvh; */
   position: relative;
-  /* overflow-y: auto; */
-  padding: var(--header-footer-height) 0 1rem;
+  padding: var(--header-footer-height) 0 var(--header-footer-height);
 }
 
 main {
-  /* padding-top: var(--header-footer-height); */
   min-height: calc(100dvh - 2 * var(--header-footer-height));
-  /* min-height: 100dvh; */
-  /* margin: 0 auto; */
   background-color: var(--scroll-base);
   overflow-y: auto;
 }
@@ -31,9 +28,6 @@ main {
 
 header, footer {
   position: fixed;
-  /* left: 50%;
-  transform: translateX(-50%); */
-  
   box-shadow: 0rem 0rem 1rem 1rem var(--shadow-color);
   max-width: var(--max-width);
   width: 100%;
@@ -55,7 +49,7 @@ footer {
   height: 100%;
   width: 100%;
   pointer-events: none;
-  /* background-color: var(--scroll-base); */
+
   background: var(--shadow-color);
   
   -webkit-mask-image: linear-gradient( to bottom,
@@ -64,7 +58,12 @@ footer {
     rgba(0, 0, 0, 0) 75%,
     rgba(0, 0, 0, 1) 100%
   );
-  mask-image: linear-gradient();
+  mask-image: linear-gradient(to bottom,
+    rgba(0, 0, 0, 1) 0,
+    rgba(0, 0, 0, 0) 25%,
+    rgba(0, 0, 0, 0) 75%,
+    rgba(0, 0, 0, 1) 100%
+  );
 }
 .charm-regular {
   font-family: "Charm";
